<resources>
    <string name="app_name">FoodBoxx</string>
    <string name="log_in">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone_number">Mobile Number</string>
    <string name="food_box">FOOD BOX</string>
    <string name="for_meals_that_fill_you_with_warmth">For meals that fill you with warmth</string>
    <string name="user">User</string>
    <string name="vendor">Vendor</string>
    <string name="forget_passwordd">Forget Password</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_one_time_password_on_this_mobile_number">We will send you an one time password on this mobile number</string>
    <string name="_1234567890">1234567890</string>
    <string name="_91">+91-</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_send_to">Enter the OTP send to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP ?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourites">Favourites</string>
    <string name="order_history">Order History</string>
    <string name="about_app">About App</string>
    <string name="dummy_phone">+91-1234567890</string>
    <string name="no_favorites">You do not have any favorite restaurants</string>
    <string name="order_history_static_text">Your previous orders are listed below :</string>
    <string name="no_orders">You haven\'t placed any orders yet</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>