<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtlogin"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="10"
        android:padding="6dp"
        android:hint="@string/enter_mobile_number"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/etMobileNumber"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="6dp"
        android:layout_below="@id/etPassword"
        android:background="@color/purple_500"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/btnLogin"
        android:padding="6dp"
        android:text="@string/forget_password"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="6dp"
        android:text="@string/register_yourself"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>

</RelativeLayout>

